# rules_xsd

./: .bazelrc  CHANGELOG.md  MODULE.bazel  README.md
docs/: BUILD.bazel  defs.md  providers.md
examples/: BUILD.bazel  common.xsd  person.xml  person.xsd
xsd/: BUILD.bazel  XsdToVocab.java  XsdValidate.java  defs.bzl  providers.bzl
