# Bazel rules for XSD: offline schema validation + XSD→RDF/OWL vocabulary generation (the rules_xsd seed lifted from uslm).
module(
    name = "rules_xsd",
    version = "0.0.1",
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")

# Dev-only.
bazel_dep(name = "rules_shell", version = "0.6.1", dev_dependency = True)
bazel_dep(name = "stardoc", version = "0.7.2", dev_dependency = True)
